--- a/package.json
+++ b/package.json
@@ -10,22 +10,21 @@
     "cypress": "cypress open"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "@react-navigation/native": "^7.1.27",
+    "@react-navigation/native-stack": "^7.9.1",
+    "expo": "~54.0.31",
+    "expo-status-bar": "~3.0.9",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-screens": "~3.20.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.81.5",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-screens": "^4.16.0",
+    "react-native-web": "~0.21.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "cypress": "^12.17.0"
+    "@babel/core": "^7.28.6",
+    "cypress": "^15.8.2"
   },
   "private": true
 }
